--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "date-fns": "^4.1.0",
     "immer": "^10.1.0",
     "lucide-react": "^0.563.0",
+    "motion": "^12.31.0",
     "nanoid": "^5.0.0",
     "next": "^15.1.0",
     "react": "^19.0.0",
