feat: resilient Slack mentions + runtime stability

--- a/.env.example
+++ b/.env.example
@@ -13,9 +13,13 @@ GITHUB_TOKEN=ghp_...
 
 # Slack Bot Token (optional, for Slack integration)
 # Create a Slack app at: https://api.slack.com/apps
-# Bot Token Scopes needed: channels:history, channels:read, search:read, users:read
+# Bot Token Scopes needed: channels:history, channels:read, users:read
+# Note: Slack mentions require a **User OAuth token (xoxp-)** with search:read.
+# Bot tokens cannot use the search API. Use channel activity + a transform as a workaround.
 # Install to workspace, then copy Bot User OAuth Token
 SLACK_BOT_TOKEN=xoxb-...
+# Optional: User OAuth Token (for Slack mentions via search API)
+SLACK_USER_TOKEN=xoxp-...
 
 # Vercel Access Token (optional, for Vercel deployment monitoring)
 # Create a token at: https://vercel.com/account/tokens
