--- a/.gitignore
+++ b/.gitignore
@@ -38,3 +38,9 @@ coverage/
 # Local files (as per CLAUDE.md convention)
 *.local.md
 .playwright-mcp/
+
+# Debug screenshots
+tmp-*.png
+
+# pnpm patch workspaces (keep .patch files tracked)
+patches/*/
