--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "@types/react-dom": "^19.0.0",
     "eslint": "^9.0.0",
     "eslint-config-next": "^15.1.0",
+    "jsdom": "^28.0.0",
     "postcss": "^8.5.0",
     "tailwindcss": "^4.0.0",
     "tw-animate-css": "^1.4.0",
