--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "agentic-canvas",
   "version": "0.1.0",
   "private": true,
+  "packageManager": "pnpm@9.15.5",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -12,7 +13,7 @@
   "dependencies": {
     "@ai-sdk/openai": "^3.0.23",
     "@ai-sdk/react": "^3.0.66",
-    "@assistant-ui/react": "^0.12.3",
+    "@assistant-ui/react": "^0.12.6",
     "@assistant-ui/react-ai-sdk": "^1.3.3",
     "@radix-ui/react-accordion": "^1.2.12",
     "@radix-ui/react-alert-dialog": "^1.1.15",
@@ -56,5 +57,10 @@
     "tw-animate-css": "^1.4.0",
     "typescript": "^5.7.0",
     "vitest": "^1.6.0"
+  },
+  "pnpm": {
+    "patchedDependencies": {
+      "@assistant-ui/tap@0.4.3": "patches/@assistant-ui__tap@0.4.3.patch"
+    }
   }
 }
