--- a/.gitignore
+++ b/.gitignore
@@ -38,6 +38,7 @@ coverage/
 # Local files (as per CLAUDE.md convention)
 *.local.md
 .playwright-mcp/
+.claude/telemetry/
 
 # Debug screenshots
 tmp-*.png
