--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
   "dependencies": {
     "@ai-sdk/openai": "^3.0.23",
     "@ai-sdk/react": "^3.0.66",
-    "@assistant-ui/react": "^0.12.6",
-    "@assistant-ui/react-ai-sdk": "^1.3.5",
+    "@assistant-ui/react": "^0.12.9",
+    "@assistant-ui/react-ai-sdk": "^1.3.6",
     "@radix-ui/react-accordion": "^1.2.12",
     "@radix-ui/react-alert-dialog": "^1.1.15",
     "@radix-ui/react-context-menu": "^2.2.16",
@@ -26,6 +26,7 @@
     "@radix-ui/react-tooltip": "^1.2.8",
     "@supermemory/tools": "^1.3.68",
     "ai": "^6.0.64",
+    "ajv": "^8.17.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
@@ -45,6 +46,8 @@
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.0.0",
+    "@testing-library/react": "^16.3.2",
+    "@testing-library/user-event": "^14.6.1",
     "@types/json-schema": "^7.0.15",
     "@types/node": "^22.0.0",
     "@types/react": "^19.0.0",
@@ -60,7 +63,7 @@
   },
   "pnpm": {
     "patchedDependencies": {
-      "@assistant-ui/tap@0.4.3": "patches/@assistant-ui__tap@0.4.3.patch"
+      "@assistant-ui/tap@0.4.5": "patches/@assistant-ui__tap@0.4.5.patch"
     }
   }
 }
