chore: snapshot branch state before merge to main

--- a/.env.example
+++ b/.env.example
@@ -6,7 +6,7 @@ OPENAI_API_KEY=sk-...
 # Get your key at: https://supermemory.ai/
 SUPERMEMORY_API_KEY=sm_...
 
-# GitHub Personal Access Token (optional, increases rate limits)
+# GitHub Personal Access Token (required for all GitHub components)
 # Get your token at: https://github.com/settings/tokens
 # Needs: repo (read) scope for private repos, or no scopes for public repos
 GITHUB_TOKEN=ghp_...
