Continue pi runtime seam and morning brief integration work

--- a/.env.example
+++ b/.env.example
@@ -6,6 +6,28 @@ OPENAI_API_KEY=sk-...
 # Get your key at: https://supermemory.ai/
 SUPERMEMORY_API_KEY=sm_...
 
+# Optional: pi runtime seam settings (phase-1 backend orchestration)
+# Runtime root for episodes/ledger/snapshots/memory session artifacts
+PI_RUNTIME_ROOT=.runtime/pi
+# Optional external runtime engine module (absolute path, relative path, file:// URL, or package name)
+# Example: file:///Users/you/Code/pi-mono/packages/runtime/dist/engine.mjs
+PI_RUNTIME_ENGINE_MODULE=
+# Optional named export from module (defaults to auto-detect: piRuntimeEngine/default/stream)
+PI_RUNTIME_ENGINE_EXPORT=
+# Optional pi-mono model selection for external runtime engine modules
+PI_MONO_PROVIDER=openai
+PI_MONO_MODEL=gpt-4o
+# Optional dry-run mode for pi-mono engine adapters ("1" emits deterministic local output)
+PI_MONO_DRY_RUN=
+# Optional: disable filesystem persistence entirely ("1" disables)
+PI_EPISODE_LOG_DISABLED=
+# Optional: enable runtime diagnostics endpoint at GET /api/pi/runtime ("1" or "true")
+PI_RUNTIME_DIAGNOSTICS_ENABLED=
+# Optional retention scheduler interval in milliseconds (default 3600000)
+PI_RETENTION_INTERVAL_MS=
+# Optional bearer token for POST /api/pi/retention
+PI_RETENTION_API_TOKEN=
+
 # GitHub Personal Access Token (required for all GitHub components)
 # Get your token at: https://github.com/settings/tokens
 # Needs: repo (read) scope for private repos, or no scopes for public repos
