--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "start": "next start",
     "lint": "next lint",
     "test": "vitest run",
+    "eval:pi:phase1": "./scripts/run-pi-phase1-gates.sh",
     "eval:min": "./scripts/run-min-evals.sh",
     "eval:min:list": "./scripts/run-min-evals.sh --list"
   },
@@ -17,6 +18,7 @@
     "@ai-sdk/react": "^3.0.66",
     "@assistant-ui/react": "^0.12.9",
     "@assistant-ui/react-ai-sdk": "^1.3.6",
+    "@mariozechner/pi-ai": "0.52.9",
     "@radix-ui/react-accordion": "^1.2.12",
     "@radix-ui/react-alert-dialog": "^1.1.15",
     "@radix-ui/react-context-menu": "^2.2.16",
