feat(pi): add guarded filesystem toolset and phased evals

--- a/package.json
+++ b/package.json
@@ -11,6 +11,10 @@
     "test": "vitest run",
     "eval:pi:phase1": "./scripts/run-pi-phase1-gates.sh",
     "eval:pi:phase2:smoke": "./scripts/run-pi-phase2-smoke.sh",
+    "eval:pi:fs:contract": "./scripts/run-pi-filesystem-evals.sh --phase contract",
+    "eval:pi:fs:readonly": "./scripts/run-pi-filesystem-evals.sh --phase readonly",
+    "eval:pi:fs:mutation": "./scripts/run-pi-filesystem-evals.sh --phase mutation",
+    "eval:pi:fs:all": "./scripts/run-pi-filesystem-evals.sh --phase all",
     "eval:min": "./scripts/run-min-evals.sh",
     "eval:min:list": "./scripts/run-min-evals.sh --list"
   },
