test(pi): add deterministic chat fs e2e and ci gates

--- a/.env.example
+++ b/.env.example
@@ -28,6 +28,17 @@ PI_RETENTION_INTERVAL_MS=
 # Optional bearer token for POST /api/pi/retention
 PI_RETENTION_API_TOKEN=
 
+# Optional: local filesystem-tool testing profile (recommended for prototype E2E/smoke runs)
+# Set PI_FS_ALLOWED_ROOT to a dedicated sandbox directory inside your repo or temp workspace.
+# Example: PI_FS_ALLOWED_ROOT=/Users/you/Code/agentic-canvas/.runtime/pi-fs-sandbox
+PI_FILESYSTEM_TOOLS_ENABLED=1
+PI_FS_ALLOWED_ROOT=
+PI_FS_MAX_READ_BYTES=262144
+PI_FS_MAX_WRITE_BYTES=262144
+PI_FS_MAX_LIST_ENTRIES=200
+PI_FS_MAX_EDIT_OPERATIONS=20
+PI_FS_DELETE_ENABLED=0
+
 # GitHub Personal Access Token (required for all GitHub components)
 # Get your token at: https://github.com/settings/tokens
 # Needs: repo (read) scope for private repos, or no scopes for public repos
